Class.newInstance is deprecated in favor of Class.getConstructor().newInstance